--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*"
-    },
-    "require-dev": {
-        "raveren/kint": "1.0.10"
+        "laravel/framework": "5.4.*",
+        "kint-php/kint": "^2.0"
     },
     "autoload": {
         "classmap": [
